--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <header>
+  <header style="margin-bottom: 100px;">
     <div class="nav">
       <h2>Awlad.H</h2>
       <h5 id="button">Download Resume</h5>
+    </div>
+    <div class="banner">
+      <div class="banner-container">
+        <img src="assets/Group.png" alt="">
+        <h1>"In the near future, I hope to <br> become a Developer. "</h1>
+        <small>
+          A developer should know about html, css, js , tailwindCSS, dailsy UI <br> and framworks like react, react router etc.
+        </small>
+        <div>
+          <a href="#footer">Contact with me</a>
+        </div>
+      </div>
     </div>
   </header>
   <main>
 
   </main>
-  <footer>
+  <footer id="footer">
 
   </footer>
 </body>
