finised main part

--- a/index.html
+++ b/index.html
@@ -25,11 +25,91 @@
       </div>
     </div>
   </header>
-  <main>
-
+  <main class="main">
+    <div class="development">
+      <h1 style="padding:15px 0px;">Why Web Development??</h1>
+      <p style="margin-bottom: 10px;">Web development is now demanding and it is also interesting. <br>And that's why  I want to do web development</p>
+      <div class="web-container">
+        <div >
+          <h3 style="margin-bottom: 25px;">I will Do Coding and <br>Change The World</h3>
+          <p style="margin-bottom: 25px;">Web development is now demanding and it <br> is also very interesting</p>
+          <div>
+            <p class="btn">Learn More</p>
+          </div>
+        </div>
+        <div><img src="assets/Layer_1.png" alt=""></div>
+      </div>
+       <div class="web-container">
+        <div><img src="assets/Group 3.png" alt=""></div>
+        <div >
+          <h3 style="margin-bottom: 25px;">I will help People by creating 
+          <br>Modern Web System</h3>
+          <p style="margin-bottom: 25px;">Web development is now demanding and it <br> is also very interesting</p>
+          <div>
+            <p class="btn">Learn More</p>
+          </div>
+        </div>
+        
+      </div>
+       <div class="web-container">
+        <div >
+          <h3 style="margin-bottom: 25px;"> I will Do Coding and 
+          <br>Change The World</h3>
+          <p style="margin-bottom: 25px;">Web development is now demanding and it <br> is also very interesting</p>
+          <div>
+            <p class="btn">Learn More</p>
+          </div>
+        </div>
+        <div><img src="assets/Group 4.png" alt=""></div>
+      </div>
+    </div>
+    <div class="inspiration">
+      <h2>My Inspiration</h2>
+      <p>I can make website that is very attractive interface and also good interface. <br> That is very much important for me. </p>
+      <div class="video-container">
+        <video class="video" controls width="770" height="400">
+        </video>
+        <source src="https://www.youtube.com/watch?v=sPM2WiwA1us" type="video/webm">
+        <source src="https://www.youtube.com/watch?v=sPM2WiwA1us" type="video/mp4"> <br>
+        
+      </div>
+    </div>
+    <div class="target">
+      <h2>My Current Target</h2>
+      <p>I can make website that is very attractive interface and also good interface. <br> That is very much important for me. </p>
+      <div class="target-container">
+        <div class="box box1">
+          <img src="assets/html.png" alt="">
+          <h2>HTML</h2>
+          <p>Html is important for develop.I want to learn development </p>
+          <div> <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">Learn More</a> </div>
+        </div>
+        <div class="box box2">
+          <img src="assets/css.png" alt="">
+          <h2>CSS</h2>
+          <p>CSS is important for web developing.I want to learn development </p>
+          <div> <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">Learn More</a> </div>
+        </div>
+        <div class="box box3">
+          <img src="assets/js.png" alt="">
+          <h2>JS</h2>
+          <p>Js is important for web developing.I want to learn development </p>
+          <div> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Learn More</a> </div>
+        </div>
+      </div>
+    </div>
+    <div class="support">
+      <h3>I need Support</h3>
+      <p style="font-weight: 100;">To do good in web developing i need support for my mentors and <br>  my friends and others.</p>
+      <div style="margin-top:25px">
+        <input class="input1" type="text" placeholder="Suggest me any feedback for me">
+        <input class="input2" type="submit" value="Submit">
+      </div>
+    </div>
   </main>
   <footer id="footer">
 
   </footer>
 </body>
 </html>
+
