--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
       <h2>My Inspiration</h2>
       <p>I can make website that is very attractive interface and also good interface. <br> That is very much important for me. </p>
       <div class="video-container">
-        <video class="video" controls width="770" height="400">
-        </video>
-        <source src="https://www.youtube.com/watch?v=sPM2WiwA1us" type="video/webm">
-        <source src="https://www.youtube.com/watch?v=sPM2WiwA1us" type="video/mp4"> <br>
-        
+        <iframe width="770" height="400" src="https://www.youtube.com/embed/XslI8h7cGDs?si=00M2fhNnNjgMG-3y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
       </div>
     </div>
     <div class="target">
@@ -108,7 +104,16 @@
     </div>
   </main>
   <footer id="footer">
-
+    <div class="footer-container">
+      <div>
+      <h4>An Open Commitment by Awlad Hossain</h4>
+    </div>
+    <div class="social-media">
+      <div><a href=""><img src="assets/facebook.png" alt="Facebook"></a></div>
+      <div> <a href=""> <img src="assets/github.png" alt="Github"> </a> </div>
+      <div><a href=""><img src="assets/linkedin-icon 1.png" alt="Linkedin"></a></div>
+    </div>
+    </div>
   </footer>
 </body>
 </html>
